implemented the fourth user story

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,15 @@ spring.application.name=Shop API
 
 spring.datasource.url=jdbc:sqlite:shop.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
-#spring.datasource.username=
-#spring.datasource.password=
+# spring.datasource.username=
+# spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=disabled
+# spring.mail.host=smtp.example.com
+# spring.mail.port=587
+# spring.mail.username=your_email@example.com
+# spring.mail.password=your_password
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
